--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,34 @@
-name: 'Generic: Test'
+name: 'Call: GitHub Release'
 
 on:
   workflow_call:
     inputs:
-      plugin_name:
-        description: 'Plugin name'
+      release_mode:
+        description: 'Release mode'
         required: true
         type: string
+      version_bump:
+        description: 'Version bump'
+        required: false
+        type: string
+      promote_from:
+        description: 'Promote from'
+        required: false
+        type: string
+    outputs:
+      release_created:
+        description: 'Release created'
+        value: ${{ jobs.github_release.outputs.release_created }}
+      tag_name:
+        description: 'Tag name'
+        value: ${{ jobs.github_release.outputs.tag_name }}
 
 jobs:
-  test-and-artifact:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          cache: gradle
-
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
-
-      - name: Run unit tests
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
-        env:
-          GITHUB_VERSION: pr${{ github.event.pull_request.number }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Artifact output
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ inputs.plugin_name }}-pr${{ github.event.pull_request.number }}
-          path: build/libs/${{ inputs.plugin_name }}-pr${{ github.event.pull_request.number }}.jar
-
-  comment-artifact:
-    needs: test-and-artifact
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-    steps:
-      - uses: benwoo1110/artifact-comment-action@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+  github_release:
+    uses: ./.github/workflows/generic.github_release.yml
+    secrets: inherit
+    with:
+      plugin_name: multiverse-core
+      release_mode: ${{ inputs.release_mode }}
+      version_bump: ${{ inputs.version_bump }}
+      promote_from: ${{ inputs.promote_from }}
